Tue Mar 22 09:18:44 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Reverted: Mon Mar 21 16:10:05 UTC 2011  Olli Savia  <ops@iki.fi>
          Put back ACE_LACKS_RLIMIT_NOFILE. The problem with LynxOS 4.2
          seems to be rlimit.

Mon Mar 21 20:40:36 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Commented out lines that may be used for debugging the
          trace error checker

Mon Mar 21 20:18:52 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Reverted previous changes

Mon Mar 21 19:07:52 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Stopped fuzz.pl from looking into lib/bin/Debug/Release
          Stopped fuzz.pl from considering *C.* and *S.* generated files
          Stopped fuzz.pl from considering *_export.h

Mon Mar 21 19:02:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Playstation xampler results are not available anymore

Mon Mar 21 16:10:05 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          ACE_LACKS_THREAD_PROCESS_SCOPING is needed on LynxOS 4.2.

Mon Mar 21 15:15:52 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check DANCE_TRACE

Mon Mar 21 14:23:46 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
        * include/makeinclude/platform_openbsd.GNU:
          Improved support for OpenBSD.

Mon Mar 21 12:48:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.cpp:
        * ace/OS_NS_netdb.h:
        * ace/OS_NS_netdb.inl:
        * ace/OS_NS_netdb.cpp:
        * ace/OS_NS_pwd.h:
        * ace/Ping_Socket.h:
        * ace/Process.cpp:
        * ace/ace_wchar.h:
        * ace/os_include/os_signal.h:
        * ace/os_include/os_stdio.h:
          Cleanup, removed lot of old VxWorks code not needed anymore
