@@ -100,19 +100,14 @@
 #define ACE_LACKS_GETIPNODEBYADDR
 #define ACE_LACKS_GETIPNODEBYNAME
 #define ACE_LACKS_ISCTYPE
-//#define ACE_LACKS_LINEBUFFERED_STREAMBUF
+#define ACE_LACKS_ISWASCII
 #define ACE_LACKS_NETDB_REENTRANT_FUNCTIONS
 #define ACE_LACKS_PERFECT_MULTICAST_FILTERING
+#define ACE_LACKS_SETSCHED
 #define ACE_LACKS_STROPTS_H
 #define ACE_LACKS_STRRECVFD
 #define ACE_LACKS_TIMESPEC_T
 #define ACE_LACKS_UCONTEXT_H
-//#define ACE_LACKS_UNBUFFERED_STREAMBUF
-//#define ACE_LACKS_WCSCASECMP
-//#define ACE_LACKS_WCSDUP
-//#define ACE_LACKS_WCSNCASECMP
-//#define ACE_LACKS_WCSNICMP
-#define ACE_LACKS_ISWASCII
 
 #define ACE_EXPLICIT_TEMPLATE_DESTRUCTOR_TAKES_ARGS
 #define ACE_PAGE_SIZE 4096
